[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Tariq Zeyad Sharaia <tariq.z.sharaia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
jupyterlab = "^3.2.4"
sklearn = "^0.0"
flake8 = "^4.0.1"
black = "^21.11b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
